@@ -16,6 +16,7 @@ Process Hacker
      Find Window
    * Service-related crashes
    * WindowExplorer plugin: sorting in tree list
+   * Process minidump creation with old versions of dbghelp.dll
 
 2.13
  * NEW/IMPROVED:
